# CloudAgentTesting

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
expense-tracker/: app.js  index.html  package-lock.json  package.json  styles.css  vite.config.js
expense-tracker/src/: App.css  App.jsx  index.css  main.jsx  useTransactions.js  utils.js
expense-tracker/src/components/: CategoryChart.jsx  MonthlyBarChart.jsx  SummaryBanner.jsx  TransactionForm.jsx  TransactionList.jsx
login_app/: app.py
login_app/templates/: dashboard.html  login.html
src/taskmanager/: __init__.py  cli.py  display.py  models.py  storage.py
tests/: __init__.py  test_cli.py  test_models.py  test_storage.py
web/chat-app/: app.js  index.html  styles.css
