[metadata]
name = taskmanager
version = 0.1.0
description = A simple command-line Task Manager built in Python
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = you@example.com
license = MIT
python_requires = >=3.9

[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    taskmanager = taskmanager.cli:main

[flake8]
max-line-length = 88
